--- a/config/database.yml
+++ b/config/database.yml
@@ -11,17 +11,21 @@ default: &default
 
 development:
   <<: *default
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  host: localhost
+  # username: imran
+  # password: 
+  database: techinterview_development
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: techinterview_db
 
 production:
   <<: *default
-  adapter: postgresql
-  database: techinterview_db
+  #adapter: postgresql
+  database: techinterview_production
